--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<link href="style.css" rel="stylesheet" />
 <title>Below Riddance Character List</title>
+<meta charset="utf-8">
+<style>
 
+</style>
 </head>
 <body>
-<h1>Clay's Below Riddance Character List</h1> 
-   
+<div class="navbar">
+  <a href="index.html">Main</a>
+    <div class="dropdown">
+      <button class="dropbtn">Characters
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="Characters/benny.html">Benny</a>
+        <a href="Characters/raine.html">Raine</a>
+        <a href="Characters/juniper.html">Juniper</a>
+        <a href="Characters/zenix.html">Zenix</a>
+      </div>
+    </div>
+  </div>
+  <h1>Clay's Below Riddance Character List</h1> 
 </body>
 </html>
