--- a/Characters/benny.html
+++ b/Characters/benny.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
 <title>Benny</title>
@@ -9,20 +9,69 @@
 </style>
 </head>
 <body>
-<div class="navbar">
-  <a href="../index.html">Main</a>
-    <div class="dropdown">
-      <button class="dropbtn">Characters
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="benny.html">Benny</a>
-        <a href="raine.html">Raine</a>
-        <a href="juniper.html">Juniper</a>
-        <a href="zenix.html">Zenix</a>
+  <div class="navbar">
+    <a href="../index.html">Main</a>
+      <div class="dropdown">
+        <button class="dropbtn">Characters
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="amami.html">Amami</a>
+          <a href="benny.html">Benny</a>
+          <a href="carmine.html">Carmine</a>
+          <a href="clementine.html">Clementine</a>
+          <a href="cooper.html">Cooper</a>
+          <a href="felix.html">Felix</a>
+          <a href="juniper.html">Juniper</a>
+          <a href="lethe.html">Lethe</a>
+          <a href="lux.html">Lux</a>
+          <a href="mocha.html">Mocha</a>
+          <a href="mochi.html">Mochi</a>
+          <a href="orson.html">Orson</a>
+          <a href="raine.html">Raine</a>
+          <a href="zenix.html">Zenix</a>
+        </div>
       </div>
     </div>
-  </div>
   <h1>Benjamin / Benny</h1> 
+  <img 
+  src="Images\Benny.png" 
+  alt="Benny" 
+  style="width:450px">
+<h1>Basics</h1>
+  <h2>Name</h2>
+  <h3>Benjamin "Benny" Falinks</h3>
+  <h2>Username</h2>
+  <h3>"Benny"</h3>
+  <h2>Gender / Pronouns</h2>
+  <h3>He / Him - Male</h3>
+  <h2>Age</h2>
+  <h3>19</h3>
+  <h2>Orientation / Sexuality</h2>
+  <h3>Homosexual</h3>
+  <h2>Availability</h2>
+  <h3>Single!</h3>
+  <h2>Personality</h2>
+  <h3> Benny is a very loud mouthed individual. He's a brat, tried and true. But he has moments where he's very quiet and calm. He has a love for the different kinds of tactical weapons.</h3>
+  <h1>Character Stats</h1>
+  <h2>Race / Class</h2>
+  <h3>Neko / Gunsmith</h3>
+  <h2>Level</h2>
+  <h3>35</h3>
+  <h2>Extra Extremities</h2>
+  <h3>Cat ears and tail</h3>
+  <h2>Abilities</h2>
+  <ul>
+    <li>Being a Neko, he has enhanced sight and hearing. </li>
+    <li><i>Lock On</i> , Benny can target 1 enemy and shoot them without miss.</li>
+    <li><i>Snipe</i>Benny can see up to 100KM away.</li>
+  </ul>
+  <h2>Weaknesses</h2>
+  <h3>He is small, and easily angered.</h3>
+  <h2>Special Skills</h2>
+  <h3> He is a popular streamer. </h3>
+
+
+  
 </body>
 </html>
