--- a/Characters/raine.html
+++ b/Characters/raine.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Raine</title>
+<title>Name</title>
 <meta charset="utf-8">
 <style>
 
@@ -16,13 +16,61 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
+        <a href="amami.html">Amami</a>
         <a href="benny.html">Benny</a>
-        <a href="raine.html">Raine</a>
+        <a href="carmine.html">Carmine</a>
+        <a href="clementine.html">Clementine</a>
+        <a href="cooper.html">Cooper</a>
+        <a href="felix.html">Felix</a>
         <a href="juniper.html">Juniper</a>
+        <a href="lethe.html">Lethe</a>
+        <a href="lux.html">Lux</a>
+        <a href="mocha.html">Mocha</a>
+        <a href="mochi.html">Mochi</a>
+        <a href="orson.html">Orson</a>
+        <a href="raine.html">Raine</a>
         <a href="zenix.html">Zenix</a>
       </div>
     </div>
   </div>
-  <h1>Raine</h1> 
+  <h1>Name</h1> 
+  <img 
+  src="" 
+  alt="Name" 
+  style="width:450px">
+<h1>Basics</h1>
+  <h2>Name</h2>
+  <h3></h3>
+  <h2>Username</h2>
+  <h3></h3>
+  <h2>Gender / Pronouns</h2>
+  <h3></h3>
+  <h2>Age</h2>
+  <h3></h3>
+  <h2>Orientation / Sexuality</h2>
+  <h3></h3>
+  <h2>Availability</h2>
+  <h3></h3>
+  <h2>Personality</h2>
+  <h3></h3>
+  <h1>Character Stats</h1>
+  <h2>Race / Class</h2>
+  <h3></h3>
+  <h2>Level</h2>
+  <h3></h3>
+  <h2>Extra Extremities</h2>
+  <h3></h3>
+  <h2>Abilities</h2>
+  <ul>
+    <li></li>
+    <li></li>
+  </ul>
+  <h2>Weaknesses</h2>
+  <h3></h3>
+  <h2>Special Skills</h2>
+  <h3></h3>
+
+
+  
 </body>
 </html>
