--- a/Characters/zenix.html
+++ b/Characters/zenix.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
 <title>Zenix</title>
@@ -9,20 +9,68 @@
 </style>
 </head>
 <body>
-<div class="navbar">
+  <div class="navbar">
     <a href="../index.html">Main</a>
-    <div class="dropdown">
-      <button class="dropbtn">Characters
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="benny.html">Benny</a>
-        <a href="raine.html">Raine</a>
-        <a href="juniper.html">Juniper</a>
-        <a href="zenix.html">Zenix</a>
+      <div class="dropdown">
+        <button class="dropbtn">Characters
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="amami.html">Amami</a>
+          <a href="benny.html">Benny</a>
+          <a href="carmine.html">Carmine</a>
+          <a href="clementine.html">Clementine</a>
+          <a href="cooper.html">Cooper</a>
+          <a href="felix.html">Felix</a>
+          <a href="juniper.html">Juniper</a>
+          <a href="lethe.html">Lethe</a>
+          <a href="lux.html">Lux</a>
+          <a href="mocha.html">Mocha</a>
+          <a href="mochi.html">Mochi</a>
+          <a href="orson.html">Orson</a>
+          <a href="raine.html">Raine</a>
+          <a href="zenix.html">Zenix</a>
+        </div>
       </div>
     </div>
-  </div>
-  <h1>Daichi / Zenix</h1> 
+  <h1>Daichi Inamura , AKA Zenix</h1> 
+  <img 
+  src="Images/Zenix.png" 
+  alt="Zenix" 
+  style="width:450px">
+<h1>Basics</h1>
+  <h2>Name</h2>
+  <h3>Daichi Inamura</h3>
+  <h2>Username</h2>
+  <h3>Zenix</h3>
+  <h2>Gender / Pronouns</h2>
+  <h3>Male - He/Him</h3>
+  <h2>Age</h2>
+  <h3>26</h3>
+  <h2>Orientation / Sexuality</h2>
+  <h3>Homosexual</h3>
+  <h2>Availability</h2>
+  <h3>Taken by Pokey</h3>
+  <h2>Personality</h2>
+  <h3>Zenix comes off as an individual whose very light hearted, full of joy and fun. He makes jokes, and likes a good laugh. He is very smart, and very agile and flexible. He likes to be someone others can depend on.</h3>
+  <h1>Character Stats</h1>
+  <h2>Race / Class</h2>
+  <h3>Mage / Moderator</h3>
+  <h2>Level</h2>
+  <h3>96</h3>
+  <h2>Extra Extremities</h2>
+  <h3>N/A</h3>
+  <h2>Abilities</h2>
+  <ul>
+    <li><i>God's Hand</i>, He is able to store inanimate objects in his 52ct deck of playing cards. He can pull the objects out at Will. The object is displayed on each card. The cards can be broken or torn, and if a card is torn, the item will immediately be lost forever, so he must be extremely careful with what he stores.</li>
+    <li><i>Moderator Abilities</i>,As a moderator, he is able to manipulate how certain items, objects, and characters interact with eachother. Examples include: Making items bounce when they touch, magnetizing two things, etc.</li>
+  </ul>
+  <h2>Weaknesses</h2>
+  <h3>He is relatively scrawny. Brute Force (If one can even touch him) can be deadly for his avatar.</h3>
+  <h2>Special Skills</h2>
+  <h3>He's great at playing card games, and he's incredibly flexible.</h3>
+
+
+  
 </body>
 </html>
