--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <link href="style.css" rel="stylesheet" />
 <title>Below Riddance Character List</title>
@@ -20,6 +20,17 @@
         <a href="Characters/raine.html">Raine</a>
         <a href="Characters/juniper.html">Juniper</a>
         <a href="Characters/zenix.html">Zenix</a>
+        <a href="Characters/orson.html">Orson</a>
+        <a href="Characters/glow.html">Glow</a>
+        <a href="Characters/lux.html">Lux</a>
+        <a href="Characters/amami.html">Amami</a>
+        <a href="Characters/carmine.html">Carmine</a>
+        <a href="Characters/lethe.html">Lethe</a>
+        <a href="Characters/mochi.html">Mochi</a>
+        <a href="Characters/felix.html">Felix</a>
+        <a href="Characters/clementine.html">Clementine</a>
+        <a href="Characters/mocha.html">Mocha</a>
+        <a href="Characters/cooper.html">Cooper</a>
       </div>
     </div>
   </div>
