--- a/Characters/carmine.html
+++ b/Characters/carmine.html
@@ -35,40 +35,41 @@
   </div>
   <h1>Name</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Images/carmine.png" 
+  alt="Carmine" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Carmine</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>Dutchess</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Male, He/They</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>24</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>He enjoys the presence of men</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Taken by Diice</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3>At first glance, Carmine can be seen as rude and hot-headed. He's quick to get fired up. But once your get past his tough exterior, he's very soft. He's a motivated person and genuinely enjoys doing what he loves. He does not like ideals being forced upon him, and he likes to do as he pleases.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Neko</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>24</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>Cat ears and Tail</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li>Increased Speed</li>
+    <li>Can jump high</li>
+    <li> Increased Hearing
   </ul>
   <h2>Weaknesses</h2>
   <h3></h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>His voice can shift and change at will, imitating anything he has previously heard.</h3>
 
 
   
