--- a/Characters/carmine.html
+++ b/Characters/carmine.html
@@ -35,7 +35,7 @@
   </div>
   <h1>Name</h1> 
   <img 
-  src="Images\Carmine.png" 
+  src="Characters/Images/Carmine.png" 
   alt="Carmine" 
   style="width:450px">
 <h1>Basics</h1>
