--- a/Characters/amami.html
+++ b/Characters/amami.html
@@ -35,40 +35,40 @@
   </div>
   <h1>Name</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Characters/Images/Amami.png" 
+  alt="Amami" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Amami Sakeguchi</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>Nightmare</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Male He/Him</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>23</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>He's the G In LGBTQ+</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Taken by Emile</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3>Amami is the kind of person who wears his heart on his sleeve. He tends to get attached quickly. He enjoys PVP games, and DDR.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Mage</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>43</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>Wears a Kitsune Mask</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li><i>Phantom Clones</i>, Can create clones of himself, but they cannot be touched, and cannot touch.</li>
+    <li><i>Basic Magic</i> , He knows basic healing spells.</li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>Has a weakness to strength attacks.</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>He can juggle.</h3>
 
 
   
