gave amami his picture back

--- a/Characters/amami.html
+++ b/Characters/amami.html
@@ -68,7 +68,7 @@
   <h2>Weaknesses</h2>
   <h3>Has a weakness to strength attacks.</h3>
   <h2>Special Skills</h2>
-  <h3>He can juggle.</h3>
+  <h3>He can juggle, and is trilingual.</h3>
 
 
   
