--- a/Characters/amami.html
+++ b/Characters/amami.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Amami</title>
 <meta charset="utf-8">
 <style>
 
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Amami</h1> 
   <img 
   src="Characters/Images/Amami.png" 
   alt="Amami" 
