--- a/Characters/amami.html
+++ b/Characters/amami.html
@@ -35,7 +35,7 @@
   </div>
   <h1>Amami</h1> 
   <img 
-  src="Characters/Images/Amami.png" 
+  src="Images/Amami.png" 
   alt="Amami" 
   style="width:450px">
 <h1>Basics</h1>
