--- a/Characters/clementine.html
+++ b/Characters/clementine.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Clementine</title>
 <meta charset="utf-8">
 <style>
 
@@ -33,42 +33,43 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Clementine</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Characters/Images/Clementine.png" 
+  alt="Clementine" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Clementine Asterox</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>Clem</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Male He/They</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>22</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>Homogynous</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Single!</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3>Clementine is a very soft person, willing to go to great lengths to make another person happy. he enjoys the freedom that BRVR gives him, and he enjoys his abilities.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Angel (Masked as an Avian) / Collector</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>45</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>Wings, and a halo that he sometimes hides.</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li><i>Holy Magic</i>, He is able to use angels magic.</li>
+    <li>Flight</li>
+    <li>Is good in hand-to-hand combat.</li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>He is a people pleaser.</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>He loves collecting things.</h3>
 
 
   
