--- a/Characters/clementine.html
+++ b/Characters/clementine.html
@@ -35,7 +35,7 @@
   </div>
   <h1>Clementine</h1> 
   <img 
-  src="Characters/Images/Clementine.png" 
+  src="./Images/Clementine.png" 
   alt="Clementine" 
   style="width:450px">
 <h1>Basics</h1>
