--- a/Characters/cooper.html
+++ b/Characters/cooper.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Cooper</title>
 <meta charset="utf-8">
 <style>
 
@@ -33,42 +33,41 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Cooper</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Characters/Images/Cooper.png" 
+  alt="Cooper" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Cooper Falinks</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>Saybr</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Demi-Boy They/Him</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>19</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>Bisexual</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Single! (Has eyes on Icarus)</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3>Like his twin brother, Cooper can be very loud. But not as loud as his brother. He is more than most times calm and content. He is happy to lend a helping hand to those in need. He loves puzzle games.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Neko</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>34</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>Cat Ears, Tail</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li>Enhanced Senses</li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>He gets startled easily.</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>He is very talented with puzzles.</h3>
 
 
   
