--- a/Characters/benny.html
+++ b/Characters/benny.html
@@ -22,6 +22,8 @@
           <a href="clementine.html">Clementine</a>
           <a href="cooper.html">Cooper</a>
           <a href="felix.html">Felix</a>
+          <a href="glow.html">Glow</a>
+          <a href="jasper.html">Jasper</a>
           <a href="juniper.html">Juniper</a>
           <a href="lethe.html">Lethe</a>
           <a href="lux.html">Lux</a>
@@ -43,6 +45,8 @@
   <h3>Benjamin "Benny" Falinks</h3>
   <h2>Username</h2>
   <h3>"Benny"</h3>
+  <h2>Guild</h2>
+  <h3>Feline Fatale</h3>
   <h2>Gender / Pronouns</h2>
   <h3>He / Him - Male</h3>
   <h2>Age</h2>
