--- a/Characters/carmine.html
+++ b/Characters/carmine.html
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -33,24 +35,26 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Carmine</h1> 
   <img 
-  src="Characters/Images/Carmine.png" 
+  src="Images/Carmine.png" 
   alt="Carmine" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3>Carmine</h3>
+  <h3>Carmine Dutchess</h3>
   <h2>Username</h2>
   <h3>Dutchess</h3>
+  <h2>Guild</h2>
+  <h3>Feline Fatale</h3>
   <h2>Gender / Pronouns</h2>
   <h3>Male, He/They</h3>
   <h2>Age</h2>
   <h3>24</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3>He enjoys the presence of men</h3>
+  <h3>Gay</h3>
   <h2>Availability</h2>
-  <h3>Taken by Diice</h3>
+  <h3>Taken by Haruno</h3>
   <h2>Personality</h2>
   <h3>At first glance, Carmine can be seen as rude and hot-headed. He's quick to get fired up. But once your get past his tough exterior, he's very soft. He's a motivated person and genuinely enjoys doing what he loves. He does not like ideals being forced upon him, and he likes to do as he pleases.</h3>
   <h1>Character Stats</h1>
