--- a/Characters/clementine.html
+++ b/Characters/clementine.html
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -35,7 +37,7 @@
   </div>
   <h1>Clementine</h1> 
   <img 
-  src="Characters/Images/Clementine.png" 
+  src="Images\Angel.png" 
   alt="Clementine" 
   style="width:450px">
 <h1>Basics</h1>
@@ -43,12 +45,14 @@
   <h3>Clementine Asterox</h3>
   <h2>Username</h2>
   <h3>Clem</h3>
+  <h2>Guild</h2>
+  <h3>N/A</h3>
   <h2>Gender / Pronouns</h2>
   <h3>Male He/They</h3>
   <h2>Age</h2>
   <h3>22</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3>Homogynous</h3>
+  <h3>Gay</h3>
   <h2>Availability</h2>
   <h3>Single!</h3>
   <h2>Personality</h2>
