--- a/Characters/glow.html
+++ b/Characters/glow.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Glow</title>
 <meta charset="utf-8">
 <style>
 
@@ -22,6 +22,7 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -33,42 +34,45 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Glow</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Images/Glow.jpg" 
+  alt="Glow" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Tatsuka Oshiyama</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>Glow</h3>
+  <h2>Guild</h2>
+  <h3>Mod Guild</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Demi-Boy, He / They</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>26</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>Demisexual</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Single!</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3>Glow is a very happy individual. He sometimes switches between first and third person, and he is usually optimistic. He enjoys giving affection, and wants to live a fulfilling life full of happiness and love. He finds happiness in his job as a moderator.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Lumiobipedal Megaleledonidae ( AKA Bipedal-Humanoid Glow Squids)</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>72</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>His hair is similar to an inkling from Splatoon, where his hair is like,,,squid appendages. 
+    Abilities (As in powers): Glow,,,he glows. He glows when he's happy, or feeling an extreme amount of emotion. His blood is highly toxic.</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
+    <li><i>Creation</i>, As a moderator, he is able to design and create NPCs, or new animal species. If he creates it, they cannot be deleted by him, and are often thrown out to be caught by bounty hunters.</li>
     <li></li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>He gets frustrated easily.</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>He throws a bangin' party.</h3>
 
 
   
