--- a/Characters/jasper.html
+++ b/Characters/jasper.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Lux</title>
+<title>Jasper</title>
 <meta charset="utf-8">
 <style>
 
@@ -35,44 +35,44 @@
       </div>
     </div>
   </div>
-  <h1>Lux</h1> 
+  <h1>Jasper</h1> 
   <img 
-  src="Images/Lux.png" 
-  alt="Lux" 
+  src="Images/Jasper.jpg" 
+  alt="Jasper" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3>Luxton 'Lux' Argyle</h3>
+  <h3>Jasper Akai</h3>
   <h2>Username</h2>
-  <h3>LUX</h3>
+  <h3>Jazpurr</h3>
   <h2>Guild</h2>
-  <h3>Mod Guild</h3>
+  <h3>N/A</h3>
   <h2>Gender / Pronouns</h2>
-  <h3>Female , She/Her</h3>
+  <h3>Male, He/Him</h3>
   <h2>Age</h2>
-  <h3>21</h3>
+  <h3>24</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3>Bisexual</h3>
+  <h3>Gay</h3>
   <h2>Availability</h2>
-  <h3>Taken by James</h3>
+  <h3>Single</h3>
   <h2>Personality</h2>
-  <h3>Lux is a very chipper person, with a vulgar tongue. While not the brightest of the family, she's incredibly loving and kind to those she cares about. She loves to make others smile, with her wit and jokes. She also enjoys,,mild amounts of violence.</h3>
+  <h3>Jasper is a very gentle person, who only sees the best in people. He is typically seen chatting with people. He takes the caretaker role in most situations. He only wants the best for people.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3>Neko</h3>
+  <h3>Neko / Alchemist</h3>
   <h2>Level</h2>
-  <h3>70</h3>
+  <h3>28</h3>
   <h2>Extra Extremities</h2>
-  <h3>Cat ears / Tails</h3>
+  <h3>Cat Ears and Tail</h3>
   <h2>Abilities</h2>
   <ul>
-    <li><i>Clones</i>, Lux can create a mass amount of clones, used to oversee many different game matches.</li>
     <li>Enhanced Senses</li>
+    <li><i>Mixology</i>, Jasper is able to create different drinks and potions with varying effects.</li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3>Low magical resistance.</h3>
+  <h3>Easily Trusting</h3>
   <h2>Special Skills</h2>
-  <h3>She plays the drums!</h3>
+  <h3>Mixologist.</h3>
 
 
   
