--- a/Characters/juniper.html
+++ b/Characters/juniper.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Juniper</title>
 <meta charset="utf-8">
 <style>
 
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -33,42 +35,44 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Juniper</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Images/Juniper.png" 
+  alt="Juniper" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Juniper Solyamey</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>June</h3>
+  <h2>Guild</h2>
+  <h3>N/A</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Male , He/Him</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>23</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>Bisexual</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Single!</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3> He is quite a people pleaser, and sees the best in people. He is very docile, and happy to follow. He is a sheep.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Sheep / Cleric</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>32</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>Sheep horns, ears, and a cute lil' tail.</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li>Basic Healing</li>
+    <li>Basic Protection</li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>Most types of Magic</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>He has an excellent aim. It's a shame he didn't want to become an archer.</h3>
 
 
   
