--- a/Characters/lethe.html
+++ b/Characters/lethe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Lethe</title>
 <meta charset="utf-8">
 <style>
 
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -33,42 +35,43 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Lethe</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Images/Lethe.png" 
+  alt="Lethe" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>[REDACTED]</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>Lethe</h3>
+  <h2>Guild</h2>
+  <h3>N/A</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>DemiMale , They/Them/He/Him</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>22</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>Bisexual</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Single!</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3> Lethe is a very flirty and relaxed individual. He likes to tease others. Aside from all his teasing, he is a very loving individual. When faced in serious situations, he is equally as serious. His demeanor can change within seconds. </h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Human / Combatant</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>57</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>N/A</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li><i>Flashclap</i>, Allows the user to stun another player for a maximum of 10 seconds. It cannot be used back to back, and has a minute cooldown time.</li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>Weak to Ice Attacks</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>Adept in weaponry, including guns, blades, etc.</h3>
 
 
   
