--- a/Characters/mocha.html
+++ b/Characters/mocha.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Mocha</title>
 <meta charset="utf-8">
 <style>
 
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -33,42 +35,43 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Mocha</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Images/Mocha.png" 
+  alt="Mocha" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Alex Ingressi</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>Mocha</h3>
+  <h2>Guild</h2>
+  <h3>N/A</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Male He/They</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>24</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>Homosexual</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Single</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3>Alex is a very sociable person. He enjoys making friends, and he really really enjoys coffee.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Human / Mixologist</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>28</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>N/A</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li><i>Sonar</i>,This ability allows the user to scan the area for possible materials for things he needs. </li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>Easily Trusting.</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>He can formulate a multitude of drinks, from sweets to alcohol.</h3>
 
 
   
