--- a/Characters/raine.html
+++ b/Characters/raine.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Raine</title>
 <meta charset="utf-8">
 <style>
 
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -33,42 +35,44 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Raine</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Images/Raine.jpg" 
+  alt="Raine" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Raine Mayfield</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>Rayne</h3>
+  <h2>Guild</h2>
+  <h3>N/A</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Male, He/They</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>19</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>So Gay</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Taken by Finn!</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3>Raine is a very soft individual. He wants to live a comfortable life. He struggles to pay attention, and is often distracted. He enjoys cute things, and squeaky toys. He is known to steal blankets and other things however, so it's best to keep an eye on him.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Weredog / Thief</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>67</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>Dog Ears / Tail</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li><i>Mine!</i>-  This ability allows Raine to select up to 10 inanimate objects to deem as "his". While under the influence of this ability, the object will only be allowed to be touched by Raine. Touching an object, will shock the victim, and teleport the object into his possession. (Pocket, hands, backpack, etc)</li>
+    <li>Can shapeshift into a dog.</li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>Easily distractable. When spooked, he freezes up.</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>He is very loveable.</h3>
 
 
   
