--- a/Characters/zenix.html
+++ b/Characters/zenix.html
@@ -22,6 +22,8 @@
           <a href="clementine.html">Clementine</a>
           <a href="cooper.html">Cooper</a>
           <a href="felix.html">Felix</a>
+          <a href="glow.html">Glow</a>
+          <a href="jasper.html">Jasper</a>
           <a href="juniper.html">Juniper</a>
           <a href="lethe.html">Lethe</a>
           <a href="lux.html">Lux</a>
@@ -43,6 +45,8 @@
   <h3>Daichi Inamura</h3>
   <h2>Username</h2>
   <h3>Zenix</h3>
+  <h2>Guild</h2>
+  <h3>Mod Guild</h3>
   <h2>Gender / Pronouns</h2>
   <h3>Male - He/Him</h3>
   <h2>Age</h2>
