--- a/Characters/cooper.html
+++ b/Characters/cooper.html
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -35,7 +37,7 @@
   </div>
   <h1>Cooper</h1> 
   <img 
-  src="Characters/Images/Cooper.png" 
+  src="Images/Cooper.png" 
   alt="Cooper" 
   style="width:450px">
 <h1>Basics</h1>
@@ -43,6 +45,8 @@
   <h3>Cooper Falinks</h3>
   <h2>Username</h2>
   <h3>Saybr</h3>
+  <h2>Guild</h2>
+  <h3>N/A</h3>
   <h2>Gender / Pronouns</h2>
   <h3>Demi-Boy They/Him</h3>
   <h2>Age</h2>
