--- a/Characters/felix.html
+++ b/Characters/felix.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Felix</title>
 <meta charset="utf-8">
 <style>
 
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -33,42 +35,43 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Felix</h1> 
   <img 
-  src="" 
+  src="Images/Felix.png" 
   alt="Name" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Felix Cardamon</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>>Blitz_</h3>
+  <h2>Guild</h2>
+  <h3>N/A</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Male He/Him</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>26</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>Homosexual</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Taken by Zero!</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3>Felix is a very...motherly, individual. He enjoys caring after others, and his temper is very hard to trigger. He's level-minded, and only looks at the best  of people. He enjoys jokes, in every aspect. Even dark jokes. He is the embodiment of a motherbear, and will jump at the defense of someone who he deems deserving. He's surprisingly strong for his appearance, and he likes to work out every day :).</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Human / Fighter</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>57</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>N/A</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li>Superhuman Strength</li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>Magic</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>He's a Gaymer .w.</h3>
 
 
   
