--- a/Characters/mochi.html
+++ b/Characters/mochi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Mochi</title>
 <meta charset="utf-8">
 <style>
 
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -33,42 +35,46 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Mochi</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Images/Mochi.png" 
+  alt="Mochi" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Rin Takehashi</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>Mochi</h3>
+  <h2>Guild</h2>
+  <h3>N/A</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Demi-Boy, He/Him/They/Their</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>24</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>Demisexual Panromantic</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Single (Secretly has a Crush on Diice)</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3>Mochi is a very..mischievous person. While their true voice is unknown, they excel at mimicking others. A true troublemaker. He’s lowkey mean.  They enjoy using their abilities to get a reaction out of another. He truly hates people who reminds him of himself. An Example being Carmine.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Kitsune / Adventurer</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>57</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>Fox Ears, and 8 Tails. he typically keeps those hidden, however.</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li>Fox Fire</li>
+    <li>Basic Visual Illusions</li>
+    <li>Enhanced Strength + Hearing</li>
+    <li>His voice mimicks whoever he's heard.</li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>Light Magic</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>He likes to make custom pins, buttons, shirts, and lights. It makes him happy.</h3>
 
 
   
