--- a/Characters/orson.html
+++ b/Characters/orson.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Name</title>
+<title>Orson</title>
 <meta charset="utf-8">
 <style>
 
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -33,42 +35,44 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Orson</h1> 
   <img 
-  src="" 
-  alt="Name" 
+  src="Images/Orson.png" 
+  alt="Orson" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3></h3>
+  <h3>Orson Wilbur</h3>
   <h2>Username</h2>
-  <h3></h3>
+  <h3>Orson</h3>
+  <h2>Guild</h2>
+  <h3>Mod Guild</h3>
   <h2>Gender / Pronouns</h2>
-  <h3></h3>
+  <h3>Male, He/Him</h3>
   <h2>Age</h2>
-  <h3></h3>
+  <h3>24</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3></h3>
+  <h3>Homosexual</h3>
   <h2>Availability</h2>
-  <h3></h3>
+  <h3>Single</h3>
   <h2>Personality</h2>
-  <h3></h3>
+  <h3>Orson is an individual who enjoys life to the fullest. He enjoys the presence of others, and just wants to see people smile. He comes from humble beginnings, and  values life in all forms. He wants to find love, and he wants to spread his happiness.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3></h3>
+  <h3>Elf / Ghost Hybrid</h3>
   <h2>Level</h2>
-  <h3></h3>
+  <h3>79</h3>
   <h2>Extra Extremities</h2>
-  <h3></h3>
+  <h3>Horns + Pointed Ears. Is also transparent.</h3>
   <h2>Abilities</h2>
   <ul>
-    <li></li>
-    <li></li>
+    <li>Air Manipulation</li>
+    <li><i>Mod Abilities:</i>As a Moderator, he is able to create items that offer different buffs, debuffs, and other AOE and status effects. </li>
   </ul>
   <h2>Weaknesses</h2>
-  <h3></h3>
+  <h3>He is not fond of heat.</h3>
   <h2>Special Skills</h2>
-  <h3></h3>
+  <h3>Master Level Baker.</h3>
 
 
   
