--- a/Characters/template.html
+++ b/Characters/template.html
@@ -22,6 +22,8 @@
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
         <a href="felix.html">Felix</a>
+        <a href="glow.html">Glow</a>
+        <a href="jasper.html">Jasper</a>
         <a href="juniper.html">Juniper</a>
         <a href="lethe.html">Lethe</a>
         <a href="lux.html">Lux</a>
@@ -42,6 +44,8 @@
   <h2>Name</h2>
   <h3></h3>
   <h2>Username</h2>
+  <h3></h3>
+  <h2>Guild</h2>
   <h3></h3>
   <h2>Gender / Pronouns</h2>
   <h3></h3>
