--- a/index.html
+++ b/index.html
@@ -16,24 +16,42 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="Characters/benny.html">Benny</a>
-        <a href="Characters/raine.html">Raine</a>
-        <a href="Characters/juniper.html">Juniper</a>
-        <a href="Characters/zenix.html">Zenix</a>
-        <a href="Characters/orson.html">Orson</a>
-        <a href="Characters/glow.html">Glow</a>
-        <a href="Characters/lux.html">Lux</a>
         <a href="Characters/amami.html">Amami</a>
+        <a href="Characters/benny.html">Benny</a>
         <a href="Characters/carmine.html">Carmine</a>
-        <a href="Characters/lethe.html">Lethe</a>
-        <a href="Characters/mochi.html">Mochi</a>
-        <a href="Characters/felix.html">Felix</a>
         <a href="Characters/clementine.html">Clementine</a>
-        <a href="Characters/mocha.html">Mocha</a>
         <a href="Characters/cooper.html">Cooper</a>
+        <a href="Characters/felix.html">Felix</a>
+        <a href="Characters/glow.html">Glow</a>
+        <a href="Characters/jasper.html">Jasper</a>
+        <a href="Characters/juniper.html">Juniper</a>
+        <a href="Characters/lethe.html">Lethe</a>
+        <a href="Characters/lux.html">Lux</a>
+        <a href="Characters/mocha.html">Mocha</a>
+        <a href="Characters/mochi.html">Mochi</a>
+        <a href="Characters/orson.html">Orson</a>
+        <a href="Characters/raine.html">Raine</a>
+        <a href="Characters/zenix.html">Zenix</a>
       </div>
     </div>
-  </div>
+    <div class="dropdown">
+        <button class="dropbtn">Single Boys
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="Characters/benny.html">Benny</a>
+          <a href="Characters/clementine.html">Clementine</a>
+          <a href="Characters/cooper.html">Cooper</a>
+          <a href="Characters/glow.html">Glow</a>
+          <a href="Characters/juniper.html">Juniper</a>
+          <a href="Characters/lethe.html">Lethe</a>
+          <a href="Characters/mocha.html">Mocha</a>
+          <a href="Characters/orson.html">Orson</a>
+        </div>
+      </div>
+    </div>
+    </div>
+
   <h1>Clay's Below Riddance Character List</h1> 
 </body>
 </html>
