--- a/Characters/glow.html
+++ b/Characters/glow.html
@@ -33,6 +33,21 @@
         <a href="zenix.html">Zenix</a>
       </div>
     </div>
+    <div class="dropdown">
+      <button class="dropbtn">Single Boys
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="Characters/benny.html">Benny</a>
+        <a href="Characters/clementine.html">Clementine</a>
+        <a href="Characters/cooper.html">Cooper</a>
+        <a href="Characters/glow.html">Glow</a>
+        <a href="Characters/juniper.html">Juniper</a>
+        <a href="Characters/lethe.html">Lethe</a>
+        <a href="Characters/mocha.html">Mocha</a>
+        <a href="Characters/orson.html">Orson</a>
+      </div>
+    </div>
   </div>
   <h1>Glow</h1> 
   <img 
