--- a/index.html
+++ b/index.html
@@ -53,5 +53,7 @@
     </div>
 
   <h1>Clay's Below Riddance Character List</h1> 
+  <h2>A small repository of all Clay's characters in Below Riddance.
+  </h2>
 </body>
 </html>
