--- a/Characters/zenix.html
+++ b/Characters/zenix.html
@@ -39,14 +39,14 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="Characters/benny.html">Benny</a>
-          <a href="Characters/clementine.html">Clementine</a>
-          <a href="Characters/cooper.html">Cooper</a>
-          <a href="Characters/glow.html">Glow</a>
-          <a href="Characters/juniper.html">Juniper</a>
-          <a href="Characters/lethe.html">Lethe</a>
-          <a href="Characters/mocha.html">Mocha</a>
-          <a href="Characters/orson.html">Orson</a>
+          <a href="benny.html">Benny</a>
+          <a href="clementine.html">Clementine</a>
+          <a href="cooper.html">Cooper</a>
+          <a href="glow.html">Glow</a>
+          <a href="juniper.html">Juniper</a>
+          <a href="lethe.html">Lethe</a>
+          <a href="mocha.html">Mocha</a>
+          <a href="orson.html">Orson</a>
         </div>
       </div>
     </div>
