--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
   <h1>Clay's Below Riddance Character List</h1> 
   <h2>A small repository of all Clay's characters in Below Riddance.
   </h2>
+  <h3><i>Gone are the days of hunting and searching for my Single Men, I have taken it into my own hands to solve this issue myself!</i></h3>
 </body>
 </html>
