--- a/Characters/aenon.html
+++ b/Characters/aenon.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <link href="../style.css" rel="stylesheet" />
-<title>Felix</title>
+<title>Aenon</title>
 <meta charset="utf-8">
 <style>
 
@@ -51,43 +51,48 @@
       </div>
     </div>
   </div>
-  <h1>Felix</h1> 
+  <h1>Name</h1> 
   <img 
-  src="Images/Felix.png" 
-  alt="Name" 
+  src="Images/Aenon.png" 
+  alt="Aenon" 
   style="width:450px">
 <h1>Basics</h1>
   <h2>Name</h2>
-  <h3>Felix Cardamon</h3>
+  <h3>Marcus Reynolds</h3>
   <h2>Username</h2>
-  <h3>>Blitz_</h3>
+  <h3>Aenon</h3>
   <h2>Guild</h2>
-  <h3>N/A</h3>
+  <h3>n/a</h3>
   <h2>Gender / Pronouns</h2>
-  <h3>Male He/Him</h3>
+  <h3>DemiBoy , He/They</h3>
   <h2>Age</h2>
-  <h3>26</h3>
+  <h3>19</h3>
   <h2>Orientation / Sexuality</h2>
-  <h3>Homosexual</h3>
+  <h3>Gay</h3>
   <h2>Availability</h2>
-  <h3>Taken by Zero!</h3>
+  <h3>Single</h3>
   <h2>Personality</h2>
-  <h3>Felix is a very...motherly, individual. He enjoys caring after others, and his temper is very hard to trigger. He's level-minded, and only looks at the best  of people. He enjoys jokes, in every aspect. Even dark jokes. He is the embodiment of a motherbear, and will jump at the defense of someone who he deems deserving. He's surprisingly strong for his appearance, and he likes to work out every day :).</h3>
+  <h3>Aenon is the pinnacle of an INFP. He's prone to overthinking things and might not be able to approach someone, but if they make the first move, he'll hold on tight and do anything for them. He is incredibly nurturing, committed, and protective of his loved ones and does everything in his power to make sure they're comfortable and feel safe with him.</h3>
   <h1>Character Stats</h1>
   <h2>Race / Class</h2>
-  <h3>Human / Fighter</h3>
+  <h3>Selkie </h3>
   <h2>Level</h2>
-  <h3>57</h3>
+  <h3>45</h3>
   <h2>Extra Extremities</h2>
-  <h3>N/A</h3>
+  <h3>Cute little selkie ears. Gills on his neck.</h3>
   <h2>Abilities</h2>
   <ul>
-    <li>Superhuman Strength</li>
-  </ul>
+    <li><i>Hydrokinesis</i>, Can generate and manipulate water. Can be used to heal. Or kill. He takes the moisture from the air, or whatever he touches.</li>
+    <li><i>Blood Bending</i>,Allows the user to take hold of and manipulate fluids within an organism's body, allowing the bender to move the organism's muscles.</li>
+    <li><i>Transformation</i>Can transform into a harp seal.
+    <img src="Images/HarpSeal.png" width="450px" alt="seal">
+</li>  
+</ul>
   <h2>Weaknesses</h2>
-  <h3>Magic</h3>
+  <h3>Needs to be atleast a little moist....weak to plants, and electricity.
+  </h3>
   <h2>Special Skills</h2>
-  <h3>He's a Gaymer .w.</h3>
+  <h3>He can breath under and over water.</h3>
 
 
   
