--- a/Characters/mocha.html
+++ b/Characters/mocha.html
@@ -16,6 +16,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
+        <a href="aenon.html">Aenon</a>
         <a href="amami.html">Amami</a>
         <a href="benny.html">Benny</a>
         <a href="carmine.html">Carmine</a>
@@ -39,6 +40,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
+        <a href="aenon.html">Aenon</a>
         <a href="benny.html">Benny</a>
         <a href="clementine.html">Clementine</a>
         <a href="cooper.html">Cooper</a>
