--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
+        <a href="Characters/aenon.html">Aenon</a>
         <a href="Characters/amami.html">Amami</a>
         <a href="Characters/benny.html">Benny</a>
         <a href="Characters/carmine.html">Carmine</a>
@@ -39,6 +40,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
+          <a href="Characters/aenon.html">Aenon</a>
           <a href="Characters/benny.html">Benny</a>
           <a href="Characters/clementine.html">Clementine</a>
           <a href="Characters/cooper.html">Cooper</a>
