--- a/Characters/aenon.html
+++ b/Characters/aenon.html
@@ -83,10 +83,9 @@
   <h2>Abilities</h2>
   <ul>
     <li><i>Hydrokinesis</i>, Can generate and manipulate water. Can be used to heal. Or kill. He takes the moisture from the air, or whatever he touches.</li>
-    <li><i>Blood Bending</i>,Allows the user to take hold of and manipulate fluids within an organism's body, allowing the bender to move the organism's muscles.</li>
-    <li><i>Transformation</i>Can transform into a harp seal.
+    <li><i>Blood Bending</i>, Allows the user to take hold of and manipulate fluids within an organism's body, allowing the bender to move the organism's muscles.</li>
+    <li><i>Transformation</i>, Can transform into a harp seal.</li>  
     <img src="Images/HarpSeal.png" width="450px" alt="seal">
-</li>  
 </ul>
   <h2>Weaknesses</h2>
   <h3>Needs to be atleast a little moist....weak to plants, and electricity.
