--- a/Characters/aenon.html
+++ b/Characters/aenon.html
@@ -51,7 +51,7 @@
       </div>
     </div>
   </div>
-  <h1>Name</h1> 
+  <h1>Aenon</h1> 
   <img 
   src="Images/Aenon.png" 
   alt="Aenon" 
@@ -83,7 +83,6 @@
   <h2>Abilities</h2>
   <ul>
     <li><i>Hydrokinesis</i>, Can generate and manipulate water. Can be used to heal. Or kill. He takes the moisture from the air, or whatever he touches.</li>
-    <li><i>Blood Bending</i>, Allows the user to take hold of and manipulate fluids within an organism's body, allowing the bender to move the organism's muscles.</li>
     <li><i>Transformation</i>, Can transform into a harp seal.</li>  
     <img src="Images/HarpSeal.png" width="450px" alt="seal">
 </ul>
